client/src/pages/Dream Dictionary/assets/dreamdictionary.module.css
@import url('https://fonts.googleapis.com/css2?family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');

* {
    font-family: 'Sarabun', sans-serif;
    cursor: pointer;
}

.container{
    display: flex;
    margin-top: 5%;
    
}
.bar {
    height: 500px;
    width: 100%;
}

.card {
    background-image: linear-gradient(#C490D1, #ACACDE, #ABDAFC);
    border-radius: 20px;
    filter: drop-shadow(0 0 20px rgba(188, 19, 177, 0.4));
    padding: 3rem;
    margin: 2%;
    display: flex;
    height: 400px;
   
}
.card div {
    margin-right: 2%;
}

.title{
    font-size: 2rem;
    font-weight: bold;
    color: white;
    text-align: center;
}
.image{
    border-radius: 20px;
}

.description{
    font-size: 1.5rem;
    width: 70%;
    background-color: white;
    border-radius: 20px;
    filter: drop-shadow(0 0 20px rgba(188, 19, 177, 0.4));
    padding: 5%;
    height: 300px;
    animation: fadeIn ease .5s;
    animation-duration: 2.1s; 
}

@keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

@media screen and (max-width: 768px){
    .container{
        display: flex;
        flex-direction: column;
        margin-top: 5%;
    }
    .card {
        background-image: linear-gradient(#C490D1, #ACACDE, #ABDAFC);
        border-radius: 20px;
        filter: drop-shadow(0 0 20px rgba(188, 19, 177, 0.4));
        padding: 3rem;
        margin: 2%;
        display: flex;
        height: 400px;
    }
    .card div {
        margin-right: 2%;
    }
    
    .title{
        font-size: 2rem;
        font-weight: bold;
        color: white;
        text-align: center;
    }
    .image{
        border-radius: 20px;
    }
    
    .description{
        font-size: 1.5rem;
        width: 70%;
        background-color: white;
        border-radius: 20px;
        filter: drop-shadow(0 0 20px rgba(188, 19, 177, 0.4));
        padding: 5%;
        height: 300px;
    }
}

@media screen and (max-width: 375px) {


    .description p {
        font-size: 15px; 
      }
    .description{
        height: 400px;
        width: 70%;
        margin: 10px;
    }

    .card {
        height: 480px;
    }
    .description h2:first-child {
        font-size: 30px; 
    }
    

}

